namespace java com.moseeker.thrift.gen.dao.struct.candidatedb
namespace py thrift_gen.gen.dao.struct.candidatedb


struct CandidateApplicationPscDO {
    1: optional i32 id,
    2: optional i32 applicationId,
    3: optional i32 pscId
}
